--- a/style/home.css
+++ b/style/home.css
@@ -15,7 +15,7 @@
 
 /* The video container is just an extra layer around the video containing the controls
    It also gives the "TV" a nice bevel effect.*/
-#videocontainer {
+#video-container {
     position: relative;
     display: block;
     margin: auto;
@@ -31,7 +31,7 @@
 }
 
 /* A small line which sits in the video container helping to improve the "TV" appearance. */
-#videocontainer::after {
+#video-container::after {
     display: inline-block;
     padding: 0 3px;
     content: "";
@@ -47,7 +47,7 @@
 }
 
 /* The video cover is just a black box which sits over the TV and hides the screen when the disc is not in. */
-#videocover {
+#video-cover {
     position: absolute;
     display: block;
     box-sizing: content-box;
@@ -59,13 +59,13 @@
 }
 
 /* Set the paragraphs in the video cover to centered with a pinkish colour. */
-#videocover p {
+#video-cover p {
     text-align: center;
     color: #c7c7c7;
 }
 
 /* Show links in the video cover as a light orangey pinkish colour. */
-#videocover a {
+#video-cover a {
     color: #f39696;
 }
 
@@ -102,7 +102,7 @@
     opacity: 0;
 }
 
-#videoslider {
+#video-slider {
     appearance: none;
     position: absolute;
     bottom: 100px;
@@ -116,11 +116,11 @@
     background-color: #4e4e4e;
 }
 
-#volume:hover, #videoslider:hover {
+#volume:hover, #video-slider:hover {
     opacity: 1;
 }
 
-#videoslider::-webkit-slider-thumb {
+#video-slider::-webkit-slider-thumb {
     appearance: none;
     width: 20px;
     height: 20px;
@@ -128,7 +128,7 @@
     background: #232323;
 }
 
-#videoslider::-moz-range-thumb {
+#video-slider::-moz-range-thumb {
     appearance: none;
     width: 20px;
     height: 20px;
@@ -136,7 +136,7 @@
     background: #232323;
 }
 
-#videoslider::-ms-thumb {
+#video-slider::-ms-thumb {
     appearance: none;
     width: 20px;
     height: 20px;
@@ -144,11 +144,11 @@
     background: #232323;
 }
 
-#volumeoff {
+#volume-off {
     display: none;
 }
 
-#pauseicon {
+#pause-icon {
     display: none;
 }
 
@@ -229,7 +229,7 @@ video {
     }
 }
 
-@keyframes playdisc {
+@keyframes play-disc {
     0% {
         transform: translateX(-50%) scale(1.1);
     }
@@ -241,7 +241,7 @@ video {
     }
 }
 
-@keyframes spindisc {
+@keyframes spin-disc {
     from {
         transform: translate(-50%, 150px) rotate(0deg);
     }
