--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,3 @@
-/* Remove margin and padding by default. */
 *, *:before, *:after {
     margin: 0;
     padding: 0;
@@ -8,16 +7,11 @@
     outline: none;
 }
 
-/* Smoothen scroll behavior for nicer visual experience
-   And also for when JavaScript scrolling occurs.
-   We're also optimizing the speed of the images as image detail is not massively important.*/
 html {
     scroll-behavior: smooth;
     image-rendering: optimizeSpeed;
 }
 
-/* This will set default settings for the page.
-   And also tell the body to fill the entire page.*/
 body {
     height: 100%;
     width: 100%;
@@ -26,22 +20,18 @@ body {
     background-color: #485d6a;
 }
 
-/* Remove underline from all links*/
 a:link {
     text-decoration: none;
 }
 
-/* Only show the underline when hovering on a link.*/
 a:hover {
     text-decoration: underline;
 }
 
-/* Big break is used to add big gaps between elements.*/
 .big-break {
     height: 80px;
 }
 
-/* The header for the entire site. */
 header {
     height: 80px;
     overflow: visible;
@@ -58,7 +48,6 @@ header nav {
     transition: height 200ms;
 }
 
-/* The logo for the site.*/
 header img {
     display: inline;
     height: 50px;
@@ -69,14 +58,12 @@ header img {
     opacity: 0;
 }
 
-/* Links inside of the header should appear indented also and they should have borders too.
-   These borders should only be visible when pressing the button.*/
 header i {
     display: inline;
     color: #00c2cb;
     margin-right: 3%;
     font-size: 30px;
-    transition: opacity 300ms;
+    transition: opacity 200ms;
     opacity: 0;
 }
 
@@ -92,7 +79,6 @@ header i {
     transition: opacity 100ms;
 }
 
-/* The footer for the entire site.*/
 footer {
     color: #6f8795;
     background-color: #3f5562;
@@ -100,7 +86,6 @@ footer {
     text-shadow: #202c32;
 }
 
-/* The h1 element in the footer should be centered and be surrounded by spacing.*/
 footer h1 {
     display: inline-block;
     padding: 12px;
@@ -109,13 +94,20 @@ footer h1 {
     transform: translateX(-50%);
 }
 
+.hang-right {
+    position: relative;
+    top: 23px;
+    right: 20px;
+    float: right;
+    margin-left: 20px;
+}
+
 @keyframes blur {
     to {
         filter: blur(30px);
     }
 }
 
-/* Shrink the logo down when the window is less than 700px wide.*/
 @media only screen and (max-width: 700px) {
     header h1 {
         font-size: 18px;
