--- a/style/cv.css
+++ b/style/cv.css
@@ -1,4 +1,4 @@
-#page {
+#wallpaper {
     background-image: linear-gradient(to right, #d5eaf1ad, #ffffff00 10%, #ffffff00 90%, #d5eaf1ad), linear-gradient(90deg, #d5eaf1 25%, transparent 25%, transparent 75%, #d5eaf1 75%, #d5eaf1), linear-gradient(90deg, #d5eaf1 25%, transparent 25%, transparent 75%, #d5eaf1 75%, #d5eaf1), linear-gradient(to bottom, #e0f0f7, #f2fafd);
     background-size: 100% 100%, 30px 30px, 30px 30px, 30px 30px;
     background-position: 0 0, 0 0, 5px 5px, 0 0;
