--- a/style/home.css
+++ b/style/home.css
@@ -1,4 +1,4 @@
-#page {
+#wallpaper {
     background-color: #b8c9dd;
     background-image: linear-gradient(#00000063, transparent 25%, transparent 75% #00000063 100%), linear-gradient(to right ,#0000009b, transparent 25%, transparent 75% #0000009b 100%);
     background-size: 100% 100%;
