--- a/style/home.css
+++ b/style/home.css
@@ -1,14 +1,3 @@
-#wallpaper {
-    background-color: #b8c9dd;
-    background-image: linear-gradient(#00000063, transparent 25%, transparent 75% #00000063 100%), linear-gradient(to right ,#0000009b, transparent 25%, transparent 75% #0000009b 100%);
-    background-size: 100% 100%;
-    transition: background-color 300ms;
-    box-shadow: inset 2px 2px 10px #00000040;
-    width: 100%;
-    position: absolute;
-    top: 0;
-}
-
 #video-container {
     position: relative;
     display: block;
@@ -261,5 +250,8 @@ video {
 @media only screen and (max-width: 700px) {
     #table {
         width: 100%;
+    }
+    .cabinet.door {
+        width: 30%;
     }
 }
