--- a/style/main.css
+++ b/style/main.css
@@ -38,7 +38,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 100;
+    z-index: 1;
 }
 
 header nav {
@@ -102,6 +102,25 @@ footer h1 {
     margin-left: 20px;
 }
 
+#page-title {
+    padding-top: 80px;
+    text-align: center;
+    color: #00c2cb;
+    font-size: 50px;
+    background-color: #3f5562;
+    text-shadow: 0px 1px 1px #047d84;
+    box-shadow: 5px 5px 30px #00000080;
+}
+
+#wallpaper {
+    background-color: #ba6b5d;
+    background-image: linear-gradient(to right, #d5eaf120, #ffffff00 10%, #ffffff00 90%, #d5eaf120), linear-gradient(90deg, #d5eaf120 25%, transparent 25%, transparent 75%, #d5eaf120 75%, #d5eaf120), linear-gradient(90deg, #d5eaf120 25%, transparent 25%, transparent 75%, #d5eaf120 75%, #d5eaf120), linear-gradient(to bottom, #e0f0f720, #f2fafd20);
+    background-size: 20px 20px;
+    transition: background-color 300ms;
+    box-shadow: inset 2px 2px 10px #00000040;
+    width: 100%;
+}
+
 @keyframes blur {
     to {
         filter: blur(30px);
@@ -113,6 +132,12 @@ footer h1 {
         font-size: 18px;
     }
     header a {
+        position: relative;
+        top: 23px;
         font-size: 18px;
+    }
+    header img {
+        display: none;
+        position: absolute;
     }
 }
